Dark mode - added test, fix snapshots

--- a/web/src/css/eventlog.less
+++ b/web/src/css/eventlog.less
@@ -27,7 +27,7 @@
     .fa-close {
         cursor: pointer;
         float: right;
-        color: var(--grey);
+        color: @grey;
         padding: 3px 0;
         padding-left: 10px;
         &:hover {
