--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -11,8 +11,8 @@
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    color: var(--text-main);
-    background-color: var(--main-bg);
+    color: @text-main;
+    background-color: @main-bg;
 
     table {
         width: 100%;
@@ -20,8 +20,8 @@
     }
 
     thead tr {
-        background-color: var(--main-bg);
-        border-bottom: solid var(--border-color-lite) 1px;
+        background-color: @main-bg;
+        border-bottom: solid @border-color-lite 1px;
         line-height: 23px;
     }
 
