--- a/web/src/css/header.less
+++ b/web/src/css/header.less
@@ -7,7 +7,7 @@
 
 header {
     padding-top: 6px;
-    background-color: var(--main-bg);
+    background-color: @main-bg;
     @separator-color: lighten(grey, 15%);
     > div {
         display: block;
